# g4cusp-rs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cusp.cc  rsm-events.csv
code/: index.html
data_analysis/: index.html
doc/: mkdocs.yml
doc/docs/: code.md  howto.md  index.md  mass_model.md  source_model.md  tests.md
doc/site/: 404.html  index.html  search.html
doc/site/howto/: index.html
doc/site/markdown-cheat-sheet/: index.html
doc/site/mass_model/: index.html
doc/site/search/: search_index.json
gdml-mass-model/: setup.xml
include/: ConfigFile.hh  DetectorConstruction.hh  DetectorHit.hh  DummySD.hh  GlobalRsmSource.hh  PhysicsList.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh.bak  RsmSource.hh  SensitiveDetector.hh  UserRun.hh  UserRunAction.hh
macros/: visGUI2.mac
search/: search_index.json
source_model/: index.html
src/: DetectorConstruction.cc  DetectorConstruction.cc.bak  DetectorHit.cc  GlobalRsmSource.cc  PhysicsList.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc.bak  RsmSource.cc  SensitiveDetector.cc  SensitiveDetector.cc.bak  UserEventAction.cc  UserRun.cc  UserRunAction.cc
tests/: index.html
tests/rs-test/: scorefile.root  test-output.ipynb
tools/event-generations/rs-source/python/: README  plot.ipynb  rotating_source_model.py  test_generate_events.py
